Fixed messages scrollbar disappearing when text flows too wide.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1826,9 +1826,7 @@ room-members-sidebar-width = 200px
   overflow auto
 
   position absolute
-  // Using min-width instead of width to fix IE9 gap on right side of messages.
-  // Don't ask me why.
-  min-width 100%
+  width 100%
 
   box-sizing border-box
   border-left 1px solid #C2C7CB
